<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/feed_title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="16dp"
        android:text="Video Title"

        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/feed_profile_pic"
        app:layout_constraintTop_toTopOf="@+id/feed_profile_pic" />

    <ImageView
        android:id="@+id/feed_image"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:adjustViewBounds="true"
        android:background="@color/black"
        android:contentDescription="Thumbnail"
        android:scaleType="fitCenter"
        app:layout_constraintDimensionRatio="H,16:9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_thumb_placeholder" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/feed_profile_pic"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:contentDescription="Profile Picture"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/feed_image"
        app:srcCompat="@drawable/ic_outline_account_circle_24"
        tools:srcCompat="@drawable/ic_outline_account_circle_24" />

    <TextView
        android:id="@+id/feed_detail_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Loading · 0 views · 1 day ago"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/feed_profile_pic"
        app:layout_constraintTop_toBottomOf="@+id/feed_category_text" />

    <Space
        android:id="@+id/space2"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/feed_detail_text" />

    <TextView
        android:id="@+id/feed_duration_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/bg_rounded_timestamp"
        android:includeFontPadding="false"
        android:paddingHorizontal="5dp"
        android:text="3:33"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/feed_image"
        app:layout_constraintEnd_toEndOf="parent" />

    <co.lujun.androidtagview.TagContainerLayout
        android:id="@+id/feed_category_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        app:container_background_color="@android:color/transparent"
        app:container_border_width="0dp"
        app:layout_constraintEnd_toStartOf="@id/feed_like_button"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/feed_title_text"
        app:layout_constraintTop_toBottomOf="@+id/feed_title_text"
        app:tag_clickable="true"
        app:tag_vertical_padding="4dp" />

    <com.like.LikeButton
        android:id="@+id/feed_like_button"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginEnd="12dp"
        app:icon_size="24dp"
        app:icon_type="thumb"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/feed_dislike_button"
        app:layout_constraintTop_toBottomOf="@+id/feed_image" />

    <com.like.LikeButton
        android:id="@+id/feed_dislike_button"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginEnd="8dp"
        android:rotation="180"
        app:icon_size="24dp"
        app:icon_type="thumb"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/feed_image" />
</androidx.constraintlayout.widget.ConstraintLayout>