<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/app_bar_search"
        android:icon="@drawable/ic_search_white_24dp"
        android:title="Search"
        app:showAsAction="always" />

    <item
        android:id="@+id/filter_menu"
        android:title="Filter By">
        <menu>
            <!--            filled dynamically-->
        </menu>
    </item>
</menu>